--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     </div>
     <div id="search-container">
     </div>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=load"></script>
 
