--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="utf-8">
     <title>Youtube Playlister</title>
     <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
-
-    <!-- Connect to the api and retrieve search results -->
-
-    <div id="buttons">
-      <label> <input id="query" value='cats' type="text"/><button id="search-button" disabled onclick="search()">Search</button></label>
-    </div>
-    <div id="search-container">
-    </div>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=load"></script>
+  </head>
+  <body ng-app="yt-playlister">
 
+    <!-- Connect to the api and retrieve search results -->
+
+    <div ng-controller="SearchCtrl">
+      <div>
+        <input ng-model="query" type="text"/>
+        <button id="search-button" ng-click="search()">Search</button>
+      </div>
+      <div>
+        <pre>
+        {{ response | json }}
+        </pre>
+      </div>
+    </div>
   </body>
 </html>
