--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Youtube Playlister</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,500,300,300italic' rel='stylesheet' type='text/css'>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="js/app.js"></script>
@@ -13,16 +14,18 @@
 
     <!-- Connect to the api and retrieve search results -->
 
-    <div ng-controller="SearchCtrl">
-      <div>
-        <input ng-model="query" type="text"/>
-        <button id="search-button" ng-click="search(query)">Search</button>
+    <div ng-controller="SearchCtrl" class="search">
+      <div class="search-controls">
+        <form>
+          <input ng-model="query" type="text"/>
+          <button id="search-button" ng-click="search(query)">Search</button>
+        </form>
       </div>
-      <div>
+      <div class="search-results">
         <ul>
           <li ng-repeat="result in searchResults">
+            <img ng-src="{{ result.snippet.thumbnails.high.url }}" alt="{{ result.snippet.description }}">
             <h2>{{ result.snippet.title }}</h2>
-            <img ng-src="{{ result.snippet.thumbnails.default.url }}" alt="{{ result.snippet.description }}">
           </li>
         </ul>
         <button ng-click="loadMore()">Load More</button>
