--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,500,300,300italic' rel='stylesheet' type='text/css'>
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="js/init.js"></script>
     <script src="js/app.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=load"></script>
   </head>
   <body ng-app="yt-playlister">
 
     <!-- Connect to the api and retrieve search results -->
+
+    <div class="playlist"></div>
 
     <div ng-controller="SearchCtrl" class="search">
       <div class="search-controls">
@@ -25,11 +28,19 @@
         <ul>
           <li ng-repeat="result in searchResults">
             <img ng-src="{{ result.snippet.thumbnails.high.url }}" alt="{{ result.snippet.description }}">
-            <h2>{{ result.snippet.title }}</h2>
+            <h2>
+              {{ result.snippet.title }}
+              <button ng-click="addToPlaylist(result.id.videoId)">Add</button>
+            </h2>
           </li>
         </ul>
         <button ng-click="loadMore()">Load More</button>
       </div>
     </div>
+
+    <div ng-controller="PlayerCtrl" class="player">
+      <iframe src="{{ currentVid() }}" frameborder="0" width="480" height="360"></iframe>
+    </div>
+
   </body>
 </html>
