--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,500,300,300italic' rel='stylesheet' type='text/css'>
+    <!-- build:js js/vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
+    <!-- endbuild -->
     <script src="js/init.js"></script>
     <script src="js/controllers/search.js"></script>
     <script src="js/controllers/player.js"></script>
