--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Youtube Playlister</title>
+    <!-- build:css css/style.css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,400italic,700,500,300,300italic' rel='stylesheet' type='text/css'>
     <!-- build:js js/vendor.js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <!-- endbuild -->
+    <!-- build:js js/app.js -->
     <script src="js/init.js"></script>
     <script src="js/controllers/search.js"></script>
     <script src="js/controllers/player.js"></script>
@@ -19,6 +22,7 @@
     <script src="js/services/player.js"></script>
     <script src="js/services/playlist.js"></script>
     <script src="js/app.js"></script>
+    <!-- endbuild -->
     <script src="https://www.youtube.com/iframe_api"></script>
     <script src="https://apis.google.com/js/client.js?onload=load"></script>
   </head>
