Remove API key from repo

--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <!-- endbuild -->
+    <script src="js/yt_pl_key.js"></script>
+    <script src="js/yt.js"></script>
     <!-- build:js js/app.js -->
-    <script src="js/init.js"></script>
     <script src="js/controllers/search.js"></script>
     <script src="js/controllers/player.js"></script>
     <script src="js/controllers/playlist.js"></script>
